[package]
name = "reactive_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
leptos = { version = "0.5.0", features = ["csr", "nightly"] }
# leptos_reactive = { version = "0.5.1", features = ["nightly"] }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# [profile.release]
# opt-level = 'z'
# lto = true
# codegen-units = 1
# panic = "abort"

# [package.metadata.leptos]
# lib-profile-release = "wasm-release"
